# react-native-xlog-jsi

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-xlog-jsi.podspec  tsconfig.json
.github/workflows/: npm-publish.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  cpp-adapter.h
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativexlogjsi/: XlogJsiModule.java  XlogJsiPackage.java
cpp/: react-native-xlog-jsi.cpp  react-native-xlog-jsi.h
cpp/xlogger/: android_xlog.h  xlogger.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativexlogjsi/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativexlogjsi/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/XlogJsiExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/XlogJsiExample.xcodeproj/: project.pbxproj
example/ios/XlogJsiExample.xcodeproj/xcshareddata/xcschemes/: XlogJsiExample.xcscheme
example/ios/XlogJsiExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: LogHelper.h  LogHelper.mm  LogUtil.h  XlogJsi.h  XlogJsi.mm
ios/XlogJsi.xcodeproj/: project.pbxproj
ios/mars.framework/Headers/comm/: verinfo.h
ios/mars.framework/Headers/xlog/: android_xlog.h  xlogger.h
src/: index.tsx
